--- a/views/_partials/_header.ejs
+++ b/views/_partials/_header.ejs
@@ -7,9 +7,9 @@
       <!-- 로고 -->
       <figure class="logo">
         <a href="/">
-          🚈
+          🔮
           <h1 class="site-title">
-            <span class="ut-red">UT</span>-NodeJS 최종 프로젝트
+            <span class="ut-red">INSIDE OUT
           </h1>
         </a>
       </figure>
