--- a/views/_partials/_navigation.ejs
+++ b/views/_partials/_navigation.ejs
@@ -10,17 +10,23 @@
       <a
         class="menu-item nav-link dropdown-toggle"
         id="dropdown00"
-        data-toggle="dropdown"
         aria-haspopup="true"
         aria-expanded="false"
         name="Transportation"
         href="/transportation"
         >교통수단</a
       >
-      <div class="dropdown-menu" aria-labelledby="dropdown00">
-        <a class="dropdown-item" href="/trains">Trains</a>
-        <a class="dropdown-item" href="/trains/new">Create New</a>
-      </div>
+    </li>
+    <li class="nav-item dropdown">
+      <a
+        class="menu-item nav-link dropdown-toggle"
+        id="dropdown05"
+        aria-haspopup="true"
+        aria-expanded="false"
+        name="Movies"
+        href="/movies"
+        >등장인물</a
+      >
     </li>
     <li class="nav-item dropdown">
       <a
