--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,10 +6,10 @@
 
     <!-- @TODO: -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Final Project | <%= title %></title>
+    <title>Final Project | Insideout <%= title %></title>
     <!-- @TODO: title태그를 완성하십시오 -->
 
-    <meta name="author" content="Aaron" />
+    <meta name="author" content="Jihyewon" />
     <!-- @TODO: 자기 이름을 작성하십시오 -->
 
     <!-- @TODO: CSS 파일에 대한 link테그를 완성하십시오 -->
