--- a/views/movie/index.ejs
+++ b/views/movie/index.ejs
@@ -4,42 +4,41 @@
       <div class="item active" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111643-285-mp8nXVQg.png);">
         <div class="item-desc">
           <h3>기쁨이(JOY)</h3>
-          <p></p>
+          <p>"We can't focus on what's going wrong. There's always a way to turn things around!"
+            <br>"자꾸 나쁜 쪽으로만 생각하면 안 돼, 모든 걸 좋은 쪽으로 생각해 봐!"
+          </p>
         </div>
       </div>
-      <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/winter-3.jpg);">
+      <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111651-931-prt3L1c7.png);">
         <div class="item-desc">
-          <h3>The Witcher 3</h3>
-          <p>The Witcher 3 is a multiplayer online battle arena by Valve. The game is a sequel to Defense
-            of the Ancients, which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
+          <h3>슬픔이(SADNESS</h3>
+          <p>"Crying helps me slow down and obsess over the weight of life's problems."
+            <br>"울음은 일생의 문제에 너무 얽매이지 않고 진정하도록 도와줘"
+          </p>
         </div>
       </div>
-      <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/rdr-2.jpg);">
+      <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111700-521-b27kxBZV.png);">
         <div class="item-desc">
-          <h3>RDR 2</h3>
-          <p>RDR 2 is a multiplayer online battle arena by Valve. The game is a sequel to Defense of the
-            Ancients, which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
+          <h3>버럭이(ANGER)</h3>
+          <p>"Congratulations, San Francisco! You've ruined pizza! First, the Hawaiians, and now you!"
+            <br>"그래, 잘한다, 샌프란시스코! 피자를 망쳤어! 시금치 피자처럼! 너도 꽝이야."
+          </p>
         </div>
       </div>
-      <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/pubg.jpg);">
+      <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111708-852-EgvwC0ZU.png);">
         <div class="item-desc">
-          <h3>PUBG Mobile</h3>
-          <p>PUBG 2 is a multiplayer online battle arena by Valve. The game is a sequel to Defense of the
-            Ancients, which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
+          <h3>까칠이(DISGUST)</h3>
+          <p>"I'd tell you, but you're too dumb to understand."
+            <br>"말해주고 싶지만 넌 이해하기에 너무 멍청해"
+          </p>
         </div>
       </div>
-      <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/fortnite.jpg);">
+      <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111717-008-tjEKROJl.png);">
         <div class="item-desc">
-          <h3>Fortnite</h3>
-          <p>Battle royale where 100 players fight to be the last person standing. which was a community-created mod
-            for Blizzard Entertainment's Warcraft III.</p>
-        </div>
-      </div>
-      <div class="item" style="background-image: url(https://www.yudiz.com/codepen/expandable-animated-card-slider/far-cry-5.jpg);">
-        <div class="item-desc">
-          <h3>Far Cry 5</h3>
-          <p>Far Cry 5 is a 2018 first-person shooter game developed by Ubisoft.
-            which was a community-created mod for Blizzard Entertainment's Warcraft III.</p>
+          <h3>소심이(FEAR)</h3>
+          <p>"I consider everyday we don't die a success."
+            <br>"난 하루하루 죽음을 맞이하지 않는다는 사실 자체가 성공한 삶이라고 여겨."
+          </p>
         </div>
       </div>
     </div>
