--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <div class="cover-box-2">
       <h1 class="page-title"><span class="ut-red">UT</span>-NodeJS 중간고사</h1>
       <p class="page-description lead">
-        I changed this simple site to an Express site.
+        I'm gonna make sure that tomorrow is another great day.
       </p>
     </div>
   </div>
