--- a/views/movie/index.ejs
+++ b/views/movie/index.ejs
@@ -1,46 +1,84 @@
-<section class="movie">
-    <h2 class="movie">indside-out</h2>
-    <div class="character">
-      <div class="item active" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111643-285-mp8nXVQg.png);">
-        <div class="item-desc">
-          <h3>기쁨이(JOY)</h3>
-          <p>"We can't focus on what's going wrong. There's always a way to turn things around!"
-            <br>"자꾸 나쁜 쪽으로만 생각하면 안 돼, 모든 걸 좋은 쪽으로 생각해 봐!"
-          </p>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>인사이드 아웃</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <section class="movie">
+        <div class="character">
+            <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111643-285-mp8nXVQg.png);">
+                <div class="item-desc">
+                    <h3>기쁨이 (JOY)</h3>
+                    <p>"We can't focus on what's going wrong. There's always a way to turn things around!"
+                        <br>"자꾸 나쁜 쪽으로만 생각하면 안 돼, 모든 걸 좋은 쪽으로 생각해 봐!"
+                    </p>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111651-931-prt3L1c7.png);">
+                <div class="item-desc">
+                    <h3>슬픔이 (SADNESS)</h3>
+                    <p>"Crying helps me slow down and obsess over the weight of life's problems."
+                        <br>"울음은 일생의 문제에 너무 얽매이지 않고 진정하도록 도와줘."
+                    </p>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111700-521-b27kxBZV.png);">
+                <div class="item-desc">
+                    <h3>버럭이 (ANGER)</h3>
+                    <p>"Congratulations, San Francisco! You've ruined pizza! First, the Hawaiians, and now you!"
+                        <br>"그래, 잘한다, 샌프란시스코! 피자를 망쳤어! 시금치 피자처럼! 너도 꽝이야."
+                    </p>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111708-852-EgvwC0ZU.png);">
+                <div class="item-desc">
+                    <h3>까칠이 (DISGUST)</h3>
+                    <p>"I'd tell you, but you're too dumb to understand."
+                        <br>"말해주고 싶지만 넌 이해하기에 너무 멍청해."
+                    </p>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111717-008-tjEKROJl.png);">
+                <div class="item-desc">
+                    <h3>소심이 (FEAR)</h3>
+                    <p>"I consider everyday we don't die a success."
+                        <br>"난 하루하루 죽음을 맞이하지 않는다는 사실 자체가 성공한 삶이라고 여겨."
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111651-931-prt3L1c7.png);">
-        <div class="item-desc">
-          <h3>슬픔이(SADNESS</h3>
-          <p>"Crying helps me slow down and obsess over the weight of life's problems."
-            <br>"울음은 일생의 문제에 너무 얽매이지 않고 진정하도록 도와줘"
-          </p>
-        </div>
-      </div>
-      <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111700-521-b27kxBZV.png);">
-        <div class="item-desc">
-          <h3>버럭이(ANGER)</h3>
-          <p>"Congratulations, San Francisco! You've ruined pizza! First, the Hawaiians, and now you!"
-            <br>"그래, 잘한다, 샌프란시스코! 피자를 망쳤어! 시금치 피자처럼! 너도 꽝이야."
-          </p>
-        </div>
-      </div>
-      <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111708-852-EgvwC0ZU.png);">
-        <div class="item-desc">
-          <h3>까칠이(DISGUST)</h3>
-          <p>"I'd tell you, but you're too dumb to understand."
-            <br>"말해주고 싶지만 넌 이해하기에 너무 멍청해"
-          </p>
-        </div>
-      </div>
-      <div class="item" style="background-image: url(https://image.lguplus.com/static/pc-contents/images/pogg/20240115-111717-008-tjEKROJl.png);">
-        <div class="item-desc">
-          <h3>소심이(FEAR)</h3>
-          <p>"I consider everyday we don't die a success."
-            <br>"난 하루하루 죽음을 맞이하지 않는다는 사실 자체가 성공한 삶이라고 여겨."
-          </p>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".character").owlCarousel({
+                autoWidth: true,
+                loop: true,
+                items: 3,
+                margin: 20,
+                center: true,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    768: {
+                        items: 2
+                    },
+                    992: {
+                        items: 3
+                    }
+                }
+            });
+
+            $(".item").click(function () {
+                $(".item").not($(this)).removeClass("active");
+                $(this).toggleClass("active");
+            });
+        });
+    </script>
+</body>
+</html>
