--- a/views/subscribers/new.ejs
+++ b/views/subscribers/new.ejs
@@ -12,11 +12,11 @@
       <div class="col-lg-7 text-center text-lg-start mb-3">
         <figure>
           <img
-            src="https://cdn.pixabay.com/photo/2015/08/07/06/28/transportation-879026_960_720.jpg"
+            src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1468881487974-TA527ESGSQGG37RZ78F6/io_bing10.jpg?format=1500w"
           />
         </figure>
         <h1 class="display-4">Contact Us</h1>
-        <p class="lead col-lg-10 fs-4">Get in touch to find out more.</p>
+        <p class="lead col-lg-10 fs-4">I'm gonna make sure that tomorrow is another great day.</p>
       </div>
 
       <div class="col-md-10 mx-auto col-lg-5 mb-5">
