--- a/views/_pages/movie.ejs
+++ b/views/_pages/movie.ejs
@@ -10,7 +10,7 @@
         <h2 class="movie-title">Inside Out</h2>
         <div class="character">
             <% for (let i = 0; i < items.length; i++) { %>
-                <div class="item" style="background-image: url(<%= items[i].image %>)">
+                <div class="item">
                     <div class="item-desc">
                         <h3><%= items[i].name %></h3>
                         <p><%= items[i].quote1 %><br><%= items[i].quote2 %></p>
