--- a/views/_partials/_navigation.ejs
+++ b/views/_partials/_navigation.ejs
@@ -7,6 +7,10 @@
       <a class="nav-link menu-item" name="About" href="/about">소개</a>
     </li>
     <li class="nav-item dropdown">
+      <div class="dropdown-menu" aria-labelledby="dropdown01">
+        <a class="dropdown-item" href="/subscribers">View All</a>
+        <a class="dropdown-item" href="/subscribers/new">Create New</a>
+      </div>
       <a
         class="menu-item nav-link dropdown-toggle"
         id="dropdown05"
