--- a/views/talks/new.ejs
+++ b/views/talks/new.ejs
@@ -88,7 +88,7 @@
         <div class="col-lg-6 text-center text-lg-start mb-3 mt-5">
           <figure>
             <img
-              src="https://cdn.pixabay.com/photo/2019/01/26/20/22/public-speaking-3956908_960_720.jpg"
+              src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1468881738829-RZGJSAIXVLCHSE2L7OBB/io_mom9.jpg?format=1500w"
             />
           </figure>
         </div>
