--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -93,7 +93,7 @@
         <div class="col-lg-6 text-center text-lg-start mb-3 mt-5">
           <figure>
             <img
-              src="https://cdn.pixabay.com/photo/2016/11/23/18/17/men-1854191_960_720.jpg"
+              src="https://images.squarespace-cdn.com/content/v1/51cdafc4e4b09eb676a64e68/1468883403203-GG6ZL77F3MI9QR5VOEAS/io_heads9.jpg?format=1500w"
             />
           </figure>
         </div>
